--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,137 @@
-body{font-family: Arial, Helvetica, sans-serif;}
-p{
-    color: white;
-    text-align: justify;
+
+body{
+    background-image: url(source/Images/fondo.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    
+
+    font-family:'Times New Roman', Times, serif;
 }
-h1, h2, h3{
+.clearfix{
+    clear: both;
+}
+#navbar{
+    position: fixed;
+    background-color: rgb(93, 90, 90);
+    top:0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+}
+nav ul li{
+    float: left;
+    list-style: none;
+    margin-left: 30px;
+    line-height: 30px;
+    font-size: 25px;
+    text-align: center;
+    font-weight: bolder;
+   
+}
+ul :link{
     color: white;
 }
-li{
+ul :active{
+    color:white;
+}
+ul :visited{
     color: white;
 }
+ul :focus{
+    color: gray;
+}
+
 header{
-    padding-left: 35%;
-    padding-right: 35%;
-    background-color:  rgba(255, 166, 0, 0.174);
-}
-.texto{
-    background-color: rgba(27, 48, 48, 0.521);
+
+    background-color: rgb(178, 178, 178);
+    margin-top: 60px;
+    left: 0;
+    width: 100%;
+    text-align: center;
 
 }
+h1{
+    color: white;
+    font-size: 40px;
+}
+h2{
+    font-size: 30px;
+    text-align: center;
+    font-weight: bold;
+    padding: 20px;
+}
+.allbody{
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 10%;
+    border: 2px solid black;
+    background-color: white;
+    
+}
+#contexto{
+    margin: 5%;
+     
+    margin-top: calc(100px - 70px);
+    text-align: center;
+}
+p{
+    font-size: 20px;
+    text-align: justify;
+    line-height: 1.5;
+    padding: 20px;
+}
+#imagencomida{
+    width: 400px;
+    height: 400px;
+    
+}
+
 .listas{
-    background-color: rgba(210, 105, 30, 0.526);
+    margin-top: 20px;
+    margin-left: 100px;
+    margin-right: 100x;
 }
-#huevo{
-    position: relative;
-  
+table{
+    margin-left: 5%;
+    margin-right: 5%;
 }
-li{
-    font-size: large;
+.ing{
+    font-size: 20px;
+    padding: 25px;
+    text-align: left;
+    font-weight: lighter;
 }
-#inicio{
-    font-size: large;
+.ingimg{
+    width: 110px;
+    height: 110px;
+    margin-left: 25px;
+}
+td{
+    font-weight: lighter;
+}
+
+#preparacion{
+    margin: 100px;
+}
+#pasos{
+    font-size: 25px;
+    text-align: center;
+}
+.imagenpasos{
+    width: 300px;
+    height: 200px;
+}
+.pasos {
+    text-align: center;
+}
+.texto p{
+    text-align: center;
+    font-size: 20px;
+}
+.texto h3{
+    text-align: center;
+    font-size: 30px;
 }
